<resources>
    <string name="app_name">AIJ</string>

    <string name="aij_crop_name">©2016 AIJ</string>
    <string name="aij_res_text">All Rights Reserved.</string>

    <string name="contact_us_txt">Contact us</string>
    <string name="welcome_lbl">Welcome</string>
    <string name="vision_lbl">Vision</string>
    <string name="misssion_lbl">Mission</string>
    <string name="about_lbl">About</string>
    <string name="why_aij_lbl">Why AIJ</string>

    <string name="action_settings">Settings</string>
    <string name="action_remove_shortcut">Remove Shortcut</string>
    <string name="action_add_shortcut">Add Shortcut</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registration</string>
    <string name="text_keep_me_login"> Keep me logged in.</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>

    <string name="reg_autocomplatetextview_hint_name">Name</string>
    <string name="rightarrow">rightarrow</string>
    <string name="rupees_sign">₹</string>
    <string name="hostel">Hostel:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="whatsapp">Whatsapp:</string>
    <string name="facebook">Facebook:</string>
    <string name="address">Address:</string>
    <string name="search_hint">Search</string>
    <string name="type">Type:</string>
    <string name="university">University:</string>
    <string name="intake">Intake</string>
    <string name="closing">Closing</string>
    <string name="about_app">About App</string>
    <string name="aij_v1_0">AIJ-(v1.0)</string>
    <string name="about_developer">About Developer</string>
    <string name="developed_by">Developed by:</string>
    <string name="mady_developer">Mitul Vaghmashi\nA Student, Computer Engineering</string>
    <string name="email_dev">Email:</string>
    <string name="mady_dev_email">mitulvaghmashi@gmail.com</string>
    <string name="mobile_dev">Mobile:</string>
    <string name="_8128079591">"8128079591"</string>
    <string name="mady_dev_fb">"www.facebook.com/mitulvaghmashi"</string>
    <string name="website">Website:</string>
    <string name="mady_16mb_com">mady.16mb.com</string>
    <string name="about_aij">About AIJ</string>
    <string name="more_info_about_aij">More info about AIJ</string>
    <string name="contact_aij">Contact AIJ</string>
    <string name="info_aij_ind_in">info@aij.ind.in</string>
    <string name="phone">Phone:</string>
    <string name="_82389_45600">"82389 45600"</string>
    <string name="_90991_09845">"90991 09845"</string>
    <string name="_0285_2901108">"02852 901108"</string>
    <string name="fax">Fax:</string>
    <string name="_0285_2620108">"0285 2620108"</string>
    <string name="www_aij_ind_in">www</string>
    <string name="site">Site:</string>
    <string name="more_details_about_aij">More details about AIJ</string>
    <string name="share">Share</string>
    <string name="share_this_app">Share This App</string>
    <string name="like_me_on_facebook">Like me on Facebook</string>
    <string name="find">Find</string>
    <string name="collages">Collages</string>
    <string name="branches">Branches</string>
    <string name="scholarship">Scholarship</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="students_corner">Students</string>
    <string name="developer">Developer</string>
    <string name="help_centers">Help Centers</string>
    <string name="q_amp_a"><![CDATA[Q&A]]></string>
    <string name="admission_step">Admission Step</string>
    <string name="new2">new2</string>
    <string name="new3">new3</string>
    <string name="new4">new4</string>
    <string name="new5">new5</string>
    <string name="new7">new7</string>
    <string name="aij">AIJ</string>
    <string name="email_hint">Email</string>
    <string name="mobile_hint">Mobile</string>
    <string name="city_hint">City</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="contacts">Contacts</string>
    <string name="amrut_institute_junagadh">Amrut Institute-Junagadh</string>
    <string name="university_btn">University</string>
    <string name="id_university_to_find">id_to_find_university</string>
    <string name="selected_or_all_collages">selected_or_all</string>
    <string name="retrive_all_collages">ALL</string>
    <string name="aij_id_to_find">id_to_find</string>
    <string name="aij_id_58">58</string>
    <string name="collge_in_ss">Collages in %s</string>
    <string name="university_id_to_find_university">UNIVERSITY</string>
    <string name="id_to_find">id_to_find</string>
    <string name="fees_collage">%s/-</string>
    <string name="collage_code">College Code:</string>
    <string name="branch_id">BRANCH</string>
    <string name="id_branch_collage">id_branch_collage</string>
    <string name="new_message_notification_placeholder_text_template">Welcome %1$s, to AIJ\nThis app basically to explore details of all the engineering collages\nIt also work as collage management system as well&#8230;</string>
    <string name="action_share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="explore_aij">Explore AiJ</string>
    <string name="faq_s">Faq\'s</string>
    <string name="sms_text">Hi&#8230;, this is the android application of AIJ, you can download it from developers site, this is very useful app for students.</string>
    <string name="item_id">item_id</string>
    <string name="desc_new_registration">New Registration</string>
    <string name="desc_new_login">New Login</string>
    <string name="desc_do_registration">Do Registration</string>
    <string name="desc_skip_regisration">Skip Regisration</string>
    <string name="desc_share">Share</string>
    <string name="desc_login_go">Login Go</string>
</resources>