<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10_dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/full_name_reg"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/reg_autocomplatetextview_hint_name"
                android:inputType="text" />

            <AutoCompleteTextView
                android:id="@+id/email_reg"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <AutoCompleteTextView
                android:id="@+id/mobile_reg"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:hint="@string/mobile_hint"
                android:inputType="phone" />

            <AutoCompleteTextView
                android:id="@+id/city_reg"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_location_city_black_24dp"
                android:hint="@string/city_hint"
                android:inputType="text" />


            <AutoCompleteTextView
                android:id="@+id/password_reg"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/password_hint" />

            <AutoCompleteTextView
                android:id="@+id/password_reg_re"
                style="@style/registration_autocomplate_textviews"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:hint="@string/confirm_password_hint" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_register_go"
                    style="@style/fab_common_style"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/desc_do_registration"
                    android:src="@drawable/ic_send_black_24dp"
                    android:tint="@color/white"
                    app:backgroundTint="@color/login_fab_go"
                    app:fabSize="normal"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_skip_go"
                    style="@style/fab_common_style"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/desc_skip_regisration"
                    android:src="@drawable/ic_cancel_black_24dp"
                    android:tint="@color/white"
                    app:backgroundTint="@color/login_fab_skip"
                    app:fabSize="normal"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>