<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10_dp">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_reg_new"
                style="@style/fab_common_style"
                android:layout_marginBottom="@dimen/dimen_5_dp"
                android:contentDescription="@string/desc_new_registration"
                android:src="@android:drawable/ic_input_add"
                android:tint="@color/white"
                app:backgroundTint="@color/background_tint_action_bar"
                app:fabSize="normal"
                app:rippleColor="@color/deep_pink" />

            <AutoCompleteTextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="@dimen/dimen_5_dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:foregroundTint="@color/red_text_hint"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/background_tint_action_bar" />

            <AutoCompleteTextView
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="@dimen/dimen_5_dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:foregroundTint="@color/red_text_hint"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:textColorHint="@color/background_tint_action_bar" />

            <CheckBox
                android:id="@+id/checkBoxKeepMeLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginBottom="@dimen/dimen_5_dp"
                android:background="@color/white"
                android:text="@string/text_keep_me_login" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_login_go"
                style="@style/fab_common_style"
                android:layout_gravity="end"
                android:contentDescription="@string/desc_new_login"
                android:imeOptions="actionGo"
                android:src="@drawable/ic_send_black_24dp"
                android:tint="@color/white"
                app:backgroundTint="@color/login_fab_go"
                app:fabSize="normal"
                app:rippleColor="@color/background_tint_action_bar" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10_dp"
                android:indeterminateDrawable="@drawable/circular_progress_bar"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

