<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10_dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/row_button_bar"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/collage_list_item_collage_id"
                    android:layout_width="@dimen/dimen_0_dp"
                    android:layout_height="@dimen/dimen_0_dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/collage_list_item_collage_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupees_sign" />

                    <TextView
                        android:id="@+id/collage_list_item_collage_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_90_dp"
                        android:text="@string/hostel" />

                    <TextView
                        android:id="@+id/collage_list_item_collage_hostel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <TextView
                    android:id="@+id/collage_list_item_collage_branches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/rightarrow"
            android:src="@drawable/ic_chevron_right_black_24dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_5_dp"
        android:background="@color/white" />
</LinearLayout>